overlays/test-both/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontapp
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /frontapp
spec:
  rules:
  - host: application.cubix.localhost
    http:
      paths:
      - path: /test
        pathType: Prefix
        backend:
          service:
            name: frontapp
            port:
              number: 80
